@@ -10,6 +10,10 @@ checkbox (0.15.7) raring; urgency=low
     specific rendercheck tests and use this to exclude the 'repeat' test
     from the set of rendercheck tests that run (LP: #1164566)
 
+  [ Jeff Lane ]
+  * jobs/miscellanea.txt.in: Added jobs for manual verification of PXE boot and
+    remote IPMI to improve server test coverage.
+
  -- Brendan Donegan <brendan.donegan@canonical.com>  Thu, 04 Apr 2013 17:04:44 +0100
 
 checkbox (0.15.6) raring; urgency=low
